
,------------------------------------------------------------------------------
| Hey, Rocco, don't forget to assign a tag to the release after you
| make dist on it!  0.0910 is ``v0_0910''!  For example:
|
| cvs tag -Rc v0_11   .
| cvs tag -Rc v0_1009 .
`------------------------------------------------------------------------------


0.1201 2000.??.??
-----------------

Moved POE::Kernel's data structures out of $self and into lexicals.
Kept references to the structures in $self so Data::Dumper can dump
the whole shebang at once.

Mike Fletcher found a bug in the TRACE_SELECT code that kept it from
showing the input bits for read select.  D'oh.

Fixed Wheel::SocketFactory to prevent it from clobbering another
wheel's selects upon destruction.  This fixes the longstanding "wheel
swap" bug listed in the FAQ (on the web site).  Replaced its blessed
hashref with a blessed listref, so it should be a wee bit faster too.

Fixed t/10_wheels_tcp.t to stop working around the longstanding "wheel
swap" bug.  This exercises the previous SocketFactory fix.

Dave Paris found a recurring bug in t/04_selects.t.  It was opening
40-some filehandles at once, which consistently runs out of available
handles in some situations.  I cut the number of handles approximately
in half, so it should work better everywhere.  This has the
unfortunate side-effect of cutting 10 tests from the suite.  We're
still not sure how the environment is using extra handles, though.


0.12 2000.11.19
---------------

This is a big shout out to all my homies on the CPAN.  Yo yo yo!

Added nick collision prevention and a /quit command to
tutorial-chat.perl.

Removed the "to do" list from Changes.

Added the 'heap' parameter to POE::Session->create().  Documented it,
too.

Fixed a condition where the Kernel would not exit.  This happened
whenever a session with extra reference counts was forcibly stopped.
The session would clean up and exit, but the Kernel's master "extra